--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,20 +1,16 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(app VERSION 0.1.0)
 
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-# Qt
-find_package(Qt5Widgets REQUIRED)
-
-file(GLOB_RECURSE SRC 
+file(GLOB_RECURSE SRC
     ${CMAKE_CURRENT_LIST_DIR}/*.cpp
     ${CMAKE_CURRENT_LIST_DIR}/*.h
-    ${CMAKE_CURRENT_LIST_DIR}/resources.qrc
 )
 
-add_executable(app ${SRC})
+add_executable(app ${SRC} ${IMGUI_SRC})
 target_include_directories(app PUBLIC ${CMAKE_CURRENT_LIST_DIR})
-target_include_directories(app PUBLIC ${Qt5Widgets_INCLUDE_DIRS})
 
-qt5_use_modules(app Widgets)
+# Find SFML shared libraries
+find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+target_link_libraries(app sfml-graphics)
+
+target_link_libraries(app ImGui-SFML::ImGui-SFML)
