switched to glfw and opengl from sfml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,18 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Mikan VERSION 0.1.0)
 
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/app)
+# GLFW
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/vendor/glfw)
 
-set(IMGUI_DIR ${CMAKE_CURRENT_LIST_DIR}/vendor/imgui)
-set(IMGUI_SFML_FIND_SFML FALSE)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/vendor/imgui-sfml)
+# GLAD
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/vendor/glad)
+
+# IMGUI
+file(GLOB IMGUI_SRC ${CMAKE_CURRENT_LIST_DIR}/vendor/imgui/*.cpp ${CMAKE_CURRENT_LIST_DIR}/vendor/imgui_impl/*.cpp)
+add_library(imgui ${IMGUI_SRC})
+target_include_directories(imgui PUBLIC ${CMAKE_CURRENT_LIST_DIR}/vendor/imgui ${CMAKE_CURRENT_LIST_DIR}/vendor/imgui_impl)
+target_link_libraries(imgui PRIVATE glad)
+target_link_libraries(imgui PRIVATE glfw)
+
+# Projects
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src/app)
