--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -12,6 +12,7 @@ target_include_directories(app PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${SDL2_INCLUDE_D
 target_link_libraries(app PRIVATE glad)
 target_link_libraries(app PRIVATE imgui)
 target_link_libraries(app PRIVATE ${SDL2_LIBS})
+target_link_libraries(app PRIVATE ${CMAKE_DL_LIBS})
 
 if(WIN32)
     foreach(DLL ${SDL2_DLLS})
