--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Build
       working-directory: ${{github.workspace}}/build
-      run: cmake --build . --config $BUILD_TYPE --target app
+      run: cmake --build . --config $BUILD_TYPE --target app -A win32
 
     - name: Test
       working-directory: ${{github.workspace}}/build
