--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,11 +19,11 @@ jobs:
 
     - name: Configure CMake
       working-directory: ${{github.workspace}}/build
-      run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=$BUILD_TYPE -A win32
 
     - name: Build
       working-directory: ${{github.workspace}}/build
-      run: cmake --build . --config $BUILD_TYPE --target app -A win32
+      run: cmake --build . --config $BUILD_TYPE --target app
 
     - name: Test
       working-directory: ${{github.workspace}}/build
