--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -7,17 +7,44 @@ file(GLOB_RECURSE SRC
 )
 
 add_executable(app ${SRC})
-target_include_directories(app PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${SDL2_INCLUDE_DIRS} ${SDL2main_INCLUDE_DIRS})
+target_include_directories(app PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_BINARY_DIR}/generated)
 set_target_properties(app PROPERTIES OUTPUT_NAME "Mikan") # Change output name
 
 target_link_libraries(app PRIVATE glad)
+target_link_libraries(app PRIVATE glfw)
 target_link_libraries(app PRIVATE imgui)
-target_link_libraries(app PRIVATE ${SDL2_LIBS})
-target_link_libraries(app PRIVATE ${CMAKE_DL_LIBS})
+target_link_libraries(app PRIVATE stb)
 
-if(WIN32)
-    foreach(DLL ${SDL2_DLLS})
-        add_custom_command(TARGET app POST_BUILD COMMAND
-            ${CMAKE_COMMAND} -E copy_if_different ${DLL} $<TARGET_FILE_DIR:app>)
-    endforeach()
-endif()
+# Resources
+set(RESOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/resources)
+file(GLOB_RECURSE RESOURCES ${RESOURCE_DIR}/*)
+cmrc_add_resource_library(resources NAMESPACE resources WHENCE ${RESOURCE_DIR} ${RESOURCES})
+target_link_libraries(app PUBLIC resources)
+
+# SET VARIABLES
+execute_process(
+        COMMAND git rev-parse --abbrev-ref HEAD
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_BRANCH
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+execute_process(
+        COMMAND git rev-parse HEAD
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_COMMIT_HASH
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+execute_process(
+        COMMAND git show -s --format=%cd --date=local
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_COMMIT_DATE
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Set variables
+add_definitions("-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH}")
+add_definitions("-DGIT_BRANCH=${GIT_BRANCH}")
+add_definitions("-DGIT_COMMIT_DATE=${GIT_COMMIT_DATE}")
+configure_file(version.h.in ${CMAKE_CURRENT_BINARY_DIR}/generated/version.h)
